outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval6026206855691237907_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the destination node if no unvisited nodes remain, creating a constructive approach to TSP with a focus on maximizing immediate distance.}
                                                                                                                                                           ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    defaulting to the destination node if no unvisited nodes remain, creating a constructive approach to TSP with a focus on maximizing immediate distance.}
                                                                                                                                                           ^
SyntaxError: unmatched '}'
